# quartz

./: .gitignore  PLAN.md  README.md  pyproject.toml
bench/: calibrate.py  cross_engine.py  decode.py  eval_ppl.py  kernel_bench.py  profile_decode.py  roofline.py  streaming_ceiling.py
bench/data/: corpus.txt
docs/: results-cpu.md  results-cross-engine.md  results-fused.md  results-int8-quality.md
quartz/: __init__.py  attention.py  cache.py  config.py  detokenize.py  dtypes.py  generate.py  ops.py  quantize.py  rope.py  sample.py  weights.py
quartz/kernels/: __init__.py  fused.py  int8.py  platform.py
quartz/models/: __init__.py  common.py  llama.py  qwen3.py
tests/: conftest.py  test_attention.py  test_cache.py  test_config.py  test_detokenize.py  test_dtypes.py  test_fused.py  test_generate.py  test_kernels.py  test_model.py  test_ops.py  test_parity.py  test_platform.py  test_ppl.py  test_quant.py  test_roofline.py  test_rope.py
